Throw TrinoException for invalid column